fix: remove horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 
 html {
+    overflow-x: hidden;
     font-family: "Noto Sans JP", sans-serif;
 }
 
